# bestwomens

./: pyproject.toml
sitewomen/: .pylintrc  db.sqlite3
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/templates/: base.html
sitewomen/users/: apps.py  context_processors.py  forms.py  urls.py  views.py
sitewomen/users/templates/users/: password_reset_done.html  password_reset_email.html  register.html
sitewomen/women/: admin.py  apps.py  converters.py  forms.py  models.py  urls.py  utils.py  views.py
sitewomen/women/migrations/: 0001_initial.py  0002_alter_women_options_women_slug_and_more.py  0003_alter_women_slug.py  0004_alter_women_is_published.py  0005_category_women_cat.py  0006_alter_women_cat.py  0007_tagpost_alter_women_cat_women_tags.py  0008_husband_women_husband.py  0009_husband_m_count.py  0010_alter_category_options_women_photo_and_more.py  0011_uploadfile_alter_women_content.py  0012_alter_women_photo.py  0013_women_author.py
sitewomen/women/static/women/css/: styles.css
sitewomen/women/templates/women/: about.html  addpage.html  base.html  confidential.html  index.html  list_categories.html  post.html  register.html
sitewomen/women/templatetags/: women_tags.py
