[tool.poetry]
name = "bestwomens"
version = "0.1.0"
description = ""
authors = ["Evgeny Zakiev <zakiev_e@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
